--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,19 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "accelerate>=1.12.0",
+    "bitsandbytes>=0.48.2",
+    "datasets>=4.4.1",
+    "flashinfer-python>=0.5.2",
+    "ipykernel>=7.1.0",
+    "ipywidgets>=8.1.8",
+    "jupyterlab>=4.5.0",
+    "peft>=0.18.0",
+    "streamlit>=1.51.0",
+    "trl>=0.25.1",
+    "vllm>=0.11.2",
+]
 
 [tool.setuptools.packages.find]
 where = ["."]
