--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
     "jupyterlab>=4.5.0",
+    "matplotlib>=3.10.7",
     "peft>=0.18.0",
     "streamlit>=1.51.0",
     "trl>=0.25.1",
