--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,23 +5,28 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "src"
 version = "0.1.0"
-description = "Add your description here"
+description = "Actions speak louder than words. Evaluating and securing AI Actions"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "accelerate>=1.12.0",
-    "bitsandbytes>=0.48.2",
     "datasets>=4.4.1",
-    "flashinfer-python>=0.5.2",
     "ipykernel>=7.1.0",
     "ipywidgets>=8.1.8",
-    "jupyterlab>=4.5.0",
     "matplotlib>=3.10.7",
-    "peft>=0.18.0",
+    "plotly>=6.5.0",
+    "pydantic>=2.12.4",
     "streamlit>=1.51.0",
-    "trl>=0.25.1",
-    "vllm>=0.11.2",
 ]
+
+#[dependency-groups]
+#runevals = [ "vllm>=0.11.2", "trl>=0.25.1", "peft>=0.18.0", "flashinfer-python>=0.5.2", "accelerate>=1.12.0", "bitsandbytes>=0.48.2", "trl>=0.25.1"]
+
+#for strealit cloud env resolve w/ poetry
+[tool.poetry.group.runevals] 
+optional = true
+
+[tool.uv]
+default-groups = []
 
 [tool.setuptools.packages.find]
 where = ["."]
